# BiofilmDES

./: .gitignore  README.md
Analysis/: AG43RodShapedBacteria.py  ChainingRodShapedBacteria.py  CompareScalingCollective.py  CompareScalingSingleChain.py  DistributionFunctions.py  FindDefects.py  FindDefectsNeighbours.py  FindTopo.py  PlotAnalysisResults.py  RodShapedBacteria.py  SphericalBacteria.py  analyse_infection.py  analysis_basic.py  analysis_master.py  checkFractalDim.py  create_morphology_phase_diagram.py  defect_testing.py  fastCellPlotting.py  findBucklingEigenvalues.py  findCriticalLengthProb.py  findInextensibleBucklingEigenvalues.py  find_channels.py  generalPlotting.py  getAverageCellLength.py  getChainStats.py  getOverlaps.py  getSizeFnT.py  hidden_prints.py  infected_vis_class.py  makePosterFigures.py  phage_vis_class.py  plotCells.py  speed_prediction.py  sweepBucklingEigenvalue.py  testOrientationalStiffnessScaling.py  utilities.py  visualise_biofilm.py  visualise_infected_biofilm.py  visualise_master.py  visualise_phage.py
Doxygen/: doxyconfig.conf
Doxygen/html/: index.html
Simulation/: CMakeLists.txt  LICENSE  adhesionClusterRun.sh  ag43ClusterRun.sh  chainingClusterRun.sh  chainingOrientationalBatch.sh  chainingPhaseDiagram.sh  chainingPhaseDiagramSingle.sh  chainingScalingBatch.sh  pullData.sh  quickMake.sh  quickPlotResults.sh  removeFailedRuns.py  runAnalysis.sh  runOrientationalSweep.sh  singleChainRun.sh  templates.cpp  test.hpp
Simulation/Bacteria/: CMakeLists.txt
Simulation/Bacteria/includes/Bacteria/: IBacterium.hpp  RodShapedBacteria.hpp  SphericalBacteria.hpp  chaining_susceptible_class.hpp
Simulation/Bacteria/source/: Divisions.cpp  RodShapedBacteria.cpp  SphericalBacteria.cpp  chaining_susceptible_class.cpp
Simulation/Biofilm/: CMakeLists.txt
Simulation/Biofilm/includes/Biofilm/: PolyBiofilm.hpp  biofilm_class.hpp  infected_biofilm_class.hpp
Simulation/Biofilm/source/: PolyBiofilm.cpp  biofilm_class.cpp  infected_biofilm_class.cpp
Simulation/Forces/: CMakeLists.txt
Simulation/Forces/includes/Forces/: forces.hpp
Simulation/Forces/source/: forces.cpp
Simulation/Grid/: CMakeLists.txt
Simulation/Grid/includes/Grid/: IndexGrid.hpp  VerletGrid.hpp
Simulation/Grid/source/: VerletGrid.cpp  grid_class_templates.cpp
Simulation/IO/: CMakeLists.txt
Simulation/IO/includes/IO/: IO.hpp
Simulation/IO/source/: IO.cpp
Simulation/Main/: CMakeLists.txt  PhageSim.cpp  PolyBacteriaSim.cpp  findCriticalChainingProb.cpp  findElasticConstantsFourierMethod.cpp  findLcDist.cpp  findOrientationalStiffness.cpp  findScaling.cpp  main.cpp
Simulation/MathUtility/: CMakeLists.txt
Simulation/MathUtility/includes/MathUtility/: Geometry.hpp  MathUtility.hpp  RandUtil.hpp  vec_class.hpp
Simulation/MathUtility/source/: MathUtility.cpp  RandUtil.cpp  vec_class.cpp
Simulation/Particle/: CMakeLists.txt
Simulation/Particle/includes/Particle/: particle.hpp
Simulation/Particle/source/: particle.cpp
Simulation/Phage/: CMakeLists.txt
Simulation/Phage/includes/Phage/: Phage.hpp
Simulation/Phage/source/: Phage.cpp
Simulation/Tests/: CMakeLists.txt
Simulation/Tests/source/: test.cpp  testAg43.cpp  testBiofilm.cpp  testPolyBiofilm.cpp  testPolyInteractions.cpp  test_bacteria.cpp  test_grid.cpp  test_grid_poly.cpp  test_infection.cpp  test_interactions.cpp  test_polymorphism.cpp  vec_tests.cpp
Simulation/includes/: CMakeLists.txt  HyperParams.hpp  IO_template.hpp  Version.h  constants.hpp  outputPaths.hpp.in  timer.hpp  utilities.hpp
